tests/cmp/dc-label-missing-opening.golden
Parse Error:
tests/cmp/dc-label-missing-opening.trp:1:39 unexpected token TokenDCLabelRight
