tests/cmp/dc-label-missing-opening.trp
let val data = 100 raisedTo alice; bob>`
in print data
end